# pgm

./: .gitignore  chap_1.py  gmm.py
BPMF/: BPMF.cpp  BPMF.h  BPMF.sln  BPMF_mcmc.py  BPMF_numpy.py  test.py
LDA/: CMakeLists.txt  LDA.sln  LDA.vcxproj  lda.cpp  lda.h  lda.py  main.cpp
MF/: MF.py  MF_mcmc.py
Naive/: naive.py
PMF/: PMF.py  PMF_mcmc.py
results/: result.txt
